# kibosy-notepad

./: .gitignore  LICENCE.md  README.md  build-kibosy-notepad.md  index.html  package.json  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: main.rs
src/components/: AccentPopup.tsx  ConfirmDialog.tsx  KibosyKeyboard.tsx  LanguageSelector.tsx
src/lib/: i18n.ts
src/locales/en/: common.json
src/locales/fr/: common.json
src/locales/ki/: common.json
src/providers/: ThemeProvider.tsx
