[package]
name = "kibosy-notepad"
version = "1.0.0"
description = "Bloc-notes officiel pour la langue Kibosy de Mayotte"
authors = ["Marovoanio"]
license = "MIT"
repository = "https://github.com/crypt0zaurus/kibosy-notepad"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"   # Strip panic cleanup logic
codegen-units = 1 # Optimize binary size
lto = true        # Enable link-time optimization
opt-level = "s"   # Optimize for size
strip = true      # Strip symbols from binary
